cmake_minimum_required(VERSION 3.14)
project(brexx C)

set(CMAKE_C_STANDARD 90)
SET(CMAKE_C_FLAGS -D__CROSS__)
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D__DEBUG__")

include_directories(inc)
include_directories(fss)
#include_directories(mvs)

add_executable(brexx
        inc/bintree.h
        inc/bmem.h
        inc/compile.h
        inc/config.h
        inc/dbginfo.h
        inc/dqueue.h
        inc/hostcmd.h
        inc/interpre.h
        inc/ldefs.h
        inc/lerror.h
        inc/lmvs.h
        inc/lstring.h
        inc/nextsymb.h
        inc/os.h
        inc/rexx.h
        inc/rxdefs.h
        inc/rxmvs.h
        inc/rxmvsext.h
        inc/stack.h
        inc/trace.h
        inc/util.h
        inc/variable.h
        inc/rxtso.h
        src/abbrev.c
        src/abs.c
        src/add.c
        src/atan2.c
        src/b2x.c
        src/bitand.c
        src/bitor.c
        src/bitxor.c
        src/bool.c
        src/c2d.c
        src/c2x.c
        src/center.c
        src/changest.c
        src/charin.c
        src/charout.c
        src/chars.c
        src/compare.c
        src/copies.c
        src/countstr.c
        src/d2c.c
        src/d2x.c
        src/datatype.c
        src/date.c
        src/dec.c
        src/delstr.c
        src/delword.c
        src/div.c
        src/equal.c
        src/errortxt.c
        src/expose.c
        src/format.c
        src/hashvalu.c
        src/inc.c
        src/index.c
        src/insert.c
        src/intdiv.c
        src/justify.c
        src/lastpos.c
        src/linein.c
        src/lineout.c
        src/lines.c
        src/lmath.c
        src/lower.c
        src/lstring.c
        src/mod.c
        src/mult.c
        src/neg.c
        src/overlay.c
        src/pow.c
        src/print.c
        src/read.c
        src/reradix.c
        src/reverse.c
        src/right.c
        src/sign.c
        src/soundex.c
        src/space.c
        src/stderr.c
        src/strip.c
        src/sub.c
        src/substr.c
        src/subword.c
        src/time.c
        src/translat.c
        src/trunc.c
        src/upper.c
        src/verify.c
        src/word.c
        src/wordidx.c
        src/wordlen.c
        src/wordpos.c
        src/words.c
        src/write.c
        src/x2b.c
        src/x2c.c
        src/x2d.c
        src/xrange.c
        fss/fss.h
        fss/fss.c
        src/address.c
        src/bintree.c
        src/bmem.c
        src/brexx.c
        src/builtin.c
        src/compile.c
        src/dqueue.c
        src/error.c
        src/expr.c
        src/hostcmd.c
        src/interpre.c
        src/nextsymb.c
        src/rexx.c
        src/rexxfunc.c
        src/rxconv.c
        src/rxfiles.c
        src/rxmath.c
        src/rxmvs.c
        src/rxstr.c
        src/rxtso.c
        src/rxword.c
        src/stack.c
        src/template.c
        src/trace.c
        src/util.c
        src/variable.c)
if(UNIX AND NOT APPLE)
   target_link_libraries(brexx m)
endif()
